--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Immutable Model",
   "main": "dist/model.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "test": "mocha ./test/specs/ --compilers js:babel-core/register --recursive --require ./test/setup.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,10 @@
   "devDependencies": {
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0",
     "webpack": "^1.12.13"
   }
 }
